sites/indigo/clusters/dal-indigo-core-1/wave-6/overlays/tailscale-operator/deployment-webfinger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale-webfinger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tailscale-webfinger
  template:
    metadata:
      labels:
        app: tailscale-webfinger
    spec:
      automountServiceAccountToken: false
      containers:
      - name: nginx
        image: nginx:1.31-alpine-slim
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 1m
            memory: 8Mi
          limits:
            cpu: 10m
            memory: 32Mi
        volumeMounts:
        - name: config
          mountPath: /usr/share/nginx/html/.well-known
          readOnly: true
      volumes:
      - name: config
        secret:
          secretName: tailscale-webfinger
          items:
          - key: webfinger
            path: webfinger
