sites/indigo/clusters/dal-indigo-core-1/wave-6/overlays/tailscale-operator/service-webfinger.yaml
apiVersion: v1
kind: Service
metadata:
  name: tailscale-webfinger
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: tailscale-webfinger
