sites/indigo/clusters/dal-indigo-core-1/wave-6/overlays/tailscale-operator/ingress-authentik-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-well-known-tailscale
  namespace: authentik
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # We omit geoblock, ratelimit, and crowdsec for these specific discovery paths to allow external services like Tailscale to validate OIDC
    traefik.ingress.kubernetes.io/router.middlewares: traefik-public-security-headers@kubernetescrd,authentik-authentik-csp@kubernetescrd
spec:
  ingressClassName: ingress-public
  tls:
    - hosts:
      - auth.indigo.dalmura.cloud
      secretName: authentik-cert
  rules:
  - host: auth.indigo.dalmura.cloud
    http:
      paths:
      - path: /application/o/tailscale/.well-known/openid-configuration
        pathType: Exact
        backend:
          service:
            name: authentik-server
            port:
              number: 80
      - path: /application/o/tailscale/jwks/
        pathType: Exact
        backend:
          service:
            name: authentik-server
            port:
              number: 80
