sites/indigo/clusters/dal-indigo-core-1/wave-6/overlays/tailscale-operator/ingress-webfinger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale-webfinger
  annotations:
    # NOTE: dalmura.cloud parent zone is manually managed
    # An A record was manually created instead of an annotation here
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: ingress-public
  tls:
    - hosts:
      - dalmura.cloud
      secretName: dalmura-cloud-cert
  rules:
  - host: dalmura.cloud
    http:
      paths:
      - path: /.well-known/webfinger
        pathType: Exact
        backend:
          service:
            name: tailscale-webfinger
            port:
              number: 80
