sites/indigo/clusters/dal-indigo-core-1/wave-6/overlays/tailscale-operator/network-policy-relay.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tailscale-relay
  namespace: tailscale
spec:
  endpointSelector:
    matchLabels:
      tailscale.com/parent-resource: ingress-proxies
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "41641"
              protocol: UDP
  egress:
    # Allow traffic to the internet (Tailscale control plane)
    - toEntities:
        - world
        - host
    # Allow DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow traffic to the Kubernetes API server
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    # Allow traffic to services within the cluster
    - toEndpoints:
        - {}
